--- a/Les 7 Hello world.html
+++ b/Les 7 Hello world.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<Ɵtle>Hello World</Ɵtle>
-</head>
-<body>
-<h1>Hello World, I’m Bhima</h1>
-</body>
+    <head>
+     <title>Hello World</title>
+    </head>
+     <body>
+        <h1>Hello World, I’m Bhima</h1>
+    </body>
 </html>
